<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2" >

    <EditText
        android:id="@+id/enter_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/enter_address_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/back_btn_text" />

        <Button
            android:id="@+id/send_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/send_to_first_activity_btn_text" />

    </LinearLayout>



</LinearLayout>
